--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,19 +12,23 @@ services:
       - 5433:5432
     networks:
       - microservices-net
-
     restart: unless-stopped
 
   mongodb:
+    image: mongo:latest
     container_name: ms_mongodb
-    image: mongo
-    ports:
-      - 27017:27017
-    volumes:
-      - mongo:/data
+    restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
-      MONGO_INITDB_ROOT_PASSWORD : 123
+      MONGO_INITDB_ROOT_PASSWORD: 123
+      MONGO_INITDB_DATABASE: admin
+    volumes:
+      - mongo:/data
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    ports:
+      - 27017:27017
+    networks:
+      - microservices-net
 
   mongo-express:
     container_name: ms_mongo_express
@@ -36,14 +40,40 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
       ME_CONFIG_MONGODB_ADMINPASSWORD: 123
       ME_CONFIG_MONGODB_SERVER: mongodb
-      # default mongodb has an admin user with username 'admin' and password 'pass', but we are changing it to 'mongo' and '123'
-  
+    networks:
+      - microservices-net
+
   mail-dev:
     container_name: ms_mail_dev
     image: maildev/maildev
     ports:
-      - 1080:1080 #ui port
-      - 1025:1025 #smtp server port
+      - 1080:1080 # ui port
+      - 1025:1025 # smtp server port
+    networks:
+      - microservices-net
+
+  kafka:
+    image: bitnami/kafka:latest
+    container_name: ms_kafka
+    environment:
+      # Unique node ID for KRaft
+      KAFKA_CFG_NODE_ID: 1
+      # Define roles
+      KAFKA_CFG_PROCESS_ROLES: broker,controller
+      # Listeners for clients and internal controller
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      # Single-node controller quorum
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_CFG_NUM_PARTITIONS: 1
+      ALLOW_PLAINTEXT_LISTENER: "yes"
+    ports:
+      - "9092:9092"
+    networks:
+      - microservices-net
 
 networks:
   microservices-net:
