--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,19 +30,6 @@ services:
     networks:
       - microservices-net
 
-  mongo-express:
-    container_name: ms_mongo_express
-    image: mongo-express
-    restart: unless-stopped
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
-      ME_CONFIG_MONGODB_ADMINPASSWORD: 123
-      ME_CONFIG_MONGODB_SERVER: mongodb
-    networks:
-      - microservices-net
-
   mail-dev: # a dummy smtp server for development and testing
     container_name: ms_mail_dev
     image: maildev/maildev
@@ -62,7 +49,7 @@ services:
       KAFKA_CFG_PROCESS_ROLES: broker,controller
       # Listeners for clients and internal controller
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
       # Single-node controller quorum
