--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -19,8 +19,8 @@ spring:
         bootstrap-servers: localhost:9092
         group-id: paymentGroup,orderGroup
         auto-offset-reset: earliest
-        key-deserializer: org.apache.kafka.common.serialization.StringSerializer
-        value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         properties:
           spring.json.trusted.packages: '*'
           spring.json.type.mapping: orderConfirmation:com.ecommerce.notification.kafka.order.OrderConfirmation,paymentConfirmation:com.ecommerce.notification.kafka.payment.PaymentConfirmation
