feat:testing completed for all 8 microservices

--- a/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/services/config-server/src/main/resources/configurations/order-service.yml
@@ -13,7 +13,7 @@ spring:
         spring.json.type.mapping: orderConfirmation:com.ecommerce.order.kafka.OrderConfirmation
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate # once the tables are created,change this to validate
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 #  flyway:
