--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,13 @@ services:
       - "9092:9092"
     networks:
       - microservices-net
-
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: ms_zipkin
+    ports:
+      - "9411:9411"
+    networks:
+      - microservices-net
 networks:
   microservices-net:
     driver: bridge
