feat:ecommerce application completed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,20 @@ services:
       - "9411:9411"
     networks:
       - microservices-net
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.2
+    container_name: ms_keycloak
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command: start-dev
+    ports:
+      - "9090:8080"
+    networks:
+      - microservices-net
+    restart: unless-stopped
+
 networks:
   microservices-net:
     driver: bridge
